UserLog, User 페이징까지 구현 완료, Employment 진행중